# augment_token_manager

./: .env.development  .env.example  .env.production  .gitignore  LICENSE  README.md  config.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
augment-token-mng-0.6.0/src/components/: TokenCard.vue
backend/: README.md  alembic.ini  main.py  pyproject.toml  uv-setup.md
backend/alembic/: env.py
backend/alembic/versions/: ae82a302d997_initial_migration.py  d09d35b8b885_add_usage_tracking_and_status_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  ide.py  tokens.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  base.py  token.py  user.py
backend/app/schemas/: __init__.py  auth.py  token.py
backend/app/services/: __init__.py  token_service.py  token_validation_service.py  user_service.py
cmd/: main.go
docker/: backend.Dockerfile  frontend.Dockerfile  mysql.cnf  nginx.conf
frontend/: .env.example  package.json  pnpm-lock.yaml  pnpm-setup.md
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  ide.ts  (+1 more)
internal/config/: config.go
internal/database/: connection.go
internal/handlers/: auth_handler.go  token_handler.go
internal/middleware/: auth.go
internal/models/: token.go
internal/repository/: token_repository.go
internal/services/: token_refresh_service.go
internal/utils/: logger.go
mysql/data/: auto.cnf  ca-key.pem
web/templates/: error.html  index.html  login.html
(+15 files in other folders)
